--- a/package.json
+++ b/package.json
@@ -1,17 +1,20 @@
 {
-  "name": "Replit-PWA",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "enquirer": "^2.3.6",
-    "jimp": "^0.16.1",
-    "node-fetch": "2.6.6"
-  }
+    "name": "replit-easy-pwa",
+    "version": "0.0.1",
+    "description": "An easy to use tool to turn your static Replit repl into a fully function PWA!",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "node index.js"
+    },
+    "bin": "./index.js",
+    "keywords": ["replit", "pwa", "repl"],
+    "author": "Piero Maddaleni <piero@piemadd.com>",
+    "license": "PAN",
+    "dependencies": {
+        "cheerio": "^1.0.0-rc.10",
+        "enquirer": "^2.3.6",
+        "jimp": "^0.16.1",
+        "node-fetch": "2.6.6"
+    }
 }
